--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iterable-operator",
-  "version": "0.8.3",
+  "version": "0.8.4",
   "description": "Utility for JavaScript Iterable and AsyncIterable",
   "files": [
     "lib",
@@ -14,7 +14,7 @@
   "author": "BlackGlory <woshenmedoubuzhidao@blackglory.me>",
   "license": "MIT",
   "scripts": {
-    "lint": "tslint -t codeFrame 'src/**/*.ts' 'test/**/*.ts'",
+    "lint": "tslint -t codeFrame 'src/**/*.ts' '__tests__/**/*.ts'",
     "test": "jest --config jest.config.js",
     "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand",
     "coverage": "jest --coverage --config jest.config.js",
