--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -3,6 +3,8 @@
     "target": "ESNext"
   , "module": "CommonJS"
   , "strict": true
+  , "noUnusedLocals": true
+  , "noUnusedParameters": true
   , "baseUrl": "."
   , "paths": {
       "@head/*": ["src/head/*"]
