--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iterable-operator",
-  "version": "0.10.2",
+  "version": "0.10.3",
   "description": "Utility for JavaScript Iterable and AsyncIterable",
   "files": [
     "lib",
@@ -33,17 +33,18 @@
     }
   },
   "devDependencies": {
-    "@rollup/plugin-typescript": "^4.1.1",
-    "@types/jest": "^25.2.1",
-    "@types/node": "^14.0.1",
+    "@rollup/plugin-typescript": "^4.1.2",
+    "@types/jest": "^25.2.3",
+    "@types/node": "^14.0.5",
     "husky": "^4.2.5",
     "jest": "^26.0.1",
-    "return-style": "^0.5.1",
-    "rollup": "^2.10.0",
-    "ts-jest": "^25.5.1",
+    "return-style": "^0.6.1",
+    "rollup": "^2.10.9",
+    "rollup-plugin-terser": "^6.1.0",
+    "ts-jest": "^26.0.0",
     "tscpaths": "^0.0.9",
     "tslint": "^6.1.2",
-    "typescript": "^3.9.2"
+    "typescript": "^3.9.3"
   },
   "dependencies": {}
 }
