--- a/package.json
+++ b/package.json
@@ -29,10 +29,13 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn lint && yarn test"
+      "pre-commit": "yarn lint && yarn test",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
   "devDependencies": {
+    "@commitlint/cli": "^9.1.1",
+    "@commitlint/config-conventional": "^9.1.1",
     "@rollup/plugin-typescript": "^5.0.1",
     "@types/jest": "^26.0.3",
     "@types/node": "^14.0.14",
