--- a/package.json
+++ b/package.json
@@ -1,7 +1,38 @@
 {
   "name": "iterable-operator",
-  "version": "0.11.0",
+  "version": "0.11.1",
   "description": "Utility for JavaScript Iterable and AsyncIterable",
+  "keywords": [
+    "Iterable",
+    "AsyncIterable",
+    "countdown",
+    "countup",
+    "range",
+    "chunk",
+    "concat",
+    "drop",
+    "filter",
+    "flatten",
+    "map",
+    "repeat",
+    "slice",
+    "split",
+    "take",
+    "tap",
+    "transform",
+    "uniq",
+    "zip",
+    "consume",
+    "each",
+    "every",
+    "find",
+    "first",
+    "includes",
+    "last",
+    "match",
+    "reduce",
+    "some"
+  ],
   "files": [
     "lib",
     "dist"
