--- a/package.json
+++ b/package.json
@@ -67,6 +67,8 @@
   "devDependencies": {
     "@commitlint/cli": "^9.1.1",
     "@commitlint/config-conventional": "^9.1.1",
+    "@rollup/plugin-commonjs": "^14.0.0",
+    "@rollup/plugin-node-resolve": "^8.4.0",
     "@rollup/plugin-typescript": "^5.0.2",
     "@types/jest": "^26.0.9",
     "@types/node": "^14.0.27",
@@ -83,5 +85,7 @@
     "tscpaths": "^0.0.9",
     "typescript": "^3.9.7"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@blackglory/types": "^0.1.0"
+  }
 }
