--- a/package.json
+++ b/package.json
@@ -39,8 +39,6 @@
   ],
   "main": "lib/es2018/index.js",
   "types": "lib/es2018/index.d.ts",
-  "module": "dist/es2018/index.mjs",
-  "browser": "dist/es2018/index.umd.js",
   "repository": "git@github.com:BlackGlory/iterable-operator.git",
   "author": "BlackGlory <woshenmedoubuzhidao@blackglory.me>",
   "license": "MIT",
@@ -74,22 +72,23 @@
     "@rollup/plugin-node-resolve": "^11.0.1",
     "@rollup/plugin-typescript": "^8.1.0",
     "@types/jest": "^26.0.19",
-    "@types/node": "^14.14.14",
-    "@typescript-eslint/eslint-plugin": "^4.11.0",
-    "@typescript-eslint/parser": "^4.11.0",
-    "eslint": "^7.16.0",
+    "@types/node": "^14.14.19",
+    "@typescript-eslint/eslint-plugin": "^4.11.1",
+    "@typescript-eslint/parser": "^4.11.1",
+    "eslint": "^7.17.0",
     "husky": "^4.3.6",
     "jest": "^26.6.3",
     "jest-extended": "^0.11.5",
-    "return-style": "^0.10.1",
+    "return-style": "^0.11.2",
     "rollup": "^2.35.1",
+    "rollup-plugin-analyzer": "^4.0.0",
     "rollup-plugin-terser": "^7.0.2",
-    "standard-version": "^9.0.0",
+    "standard-version": "^9.1.0",
     "ts-jest": "^26.4.4",
     "tscpaths": "^0.0.9",
     "typescript": "^4.1.3"
   },
   "dependencies": {
-    "@blackglory/types": "^0.1.11"
+    "@blackglory/types": "^0.2.3"
   }
 }
