--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "standard-version": "^9.1.0",
     "ts-jest": "^26.4.4",
     "tscpaths": "^0.0.9",
+    "tslib": "^2.1.0",
     "typescript": "^4.1.3"
   },
   "dependencies": {
