--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   "license": "MIT",
   "scripts": {
     "lint": "eslint --ext .js,.jsx,.ts,.tsx --quiet src __tests__",
-    "test": "jest --config jest.config.js",
+    "test": "jest --runInBand --config jest.config.js",
     "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand",
     "test:coverage": "jest --coverage --config jest.config.js",
     "prepublishOnly": "run-s clean build bundle",
@@ -65,7 +65,7 @@
     }
   },
   "devDependencies": {
-    "@blackglory/jest-matchers": "^0.1.18",
+    "@blackglory/jest-matchers": "^0.1.19",
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
     "@rollup/plugin-commonjs": "^19.0.0",
@@ -73,9 +73,9 @@
     "@rollup/plugin-node-resolve": "^13.0.0",
     "@rollup/plugin-replace": "^2.4.2",
     "@rollup/plugin-typescript": "^8.2.1",
-    "@types/jest": "^26.0.23",
-    "@typescript-eslint/eslint-plugin": "^4.28.1",
-    "@typescript-eslint/parser": "^4.28.1",
+    "@types/jest": "^26.0.24",
+    "@typescript-eslint/eslint-plugin": "^4.28.2",
+    "@typescript-eslint/parser": "^4.28.2",
     "eslint": "^7.30.0",
     "husky": "^4.3.8",
     "jest": "^27.0.6",
@@ -83,7 +83,7 @@
     "npm-run-all": "^4.1.5",
     "return-style": "^0.12.3",
     "rimraf": "^3.0.2",
-    "rollup": "^2.52.7",
+    "rollup": "^2.53.1",
     "rollup-plugin-analyzer": "^4.0.0",
     "rollup-plugin-terser": "^7.0.2",
     "standard-version": "^9.3.0",
@@ -95,6 +95,6 @@
   "dependencies": {
     "@blackglory/errors": "^1.1.2",
     "@blackglory/go": "^0.1.0",
-    "@blackglory/types": "^0.4.6"
+    "@blackglory/types": "^0.4.7"
   }
 }
