--- a/package.json
+++ b/package.json
@@ -65,36 +65,36 @@
     }
   },
   "devDependencies": {
-    "@blackglory/jest-matchers": "^0.1.19",
-    "@commitlint/cli": "^12.1.4",
-    "@commitlint/config-conventional": "^12.1.4",
-    "@rollup/plugin-commonjs": "^19.0.0",
+    "@blackglory/jest-matchers": "^0.1.20",
+    "@commitlint/cli": "^13.1.0",
+    "@commitlint/config-conventional": "^13.1.0",
+    "@rollup/plugin-commonjs": "^20.0.0",
     "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^13.0.0",
-    "@rollup/plugin-replace": "^2.4.2",
-    "@rollup/plugin-typescript": "^8.2.1",
-    "@types/jest": "^26.0.24",
-    "@typescript-eslint/eslint-plugin": "^4.28.2",
-    "@typescript-eslint/parser": "^4.28.2",
-    "eslint": "^7.30.0",
+    "@rollup/plugin-node-resolve": "^13.0.4",
+    "@rollup/plugin-replace": "^3.0.0",
+    "@rollup/plugin-typescript": "^8.2.5",
+    "@types/jest": "^27.0.1",
+    "@typescript-eslint/eslint-plugin": "^4.29.3",
+    "@typescript-eslint/parser": "^4.29.3",
+    "eslint": "^7.32.0",
     "husky": "^4.3.8",
-    "jest": "^27.0.6",
+    "jest": "^27.1.0",
     "jest-extended": "^0.11.5",
     "npm-run-all": "^4.1.5",
     "return-style": "^0.12.3",
     "rimraf": "^3.0.2",
-    "rollup": "^2.53.1",
+    "rollup": "^2.56.3",
     "rollup-plugin-analyzer": "^4.0.0",
     "rollup-plugin-terser": "^7.0.2",
-    "standard-version": "^9.3.0",
-    "ts-jest": "^27.0.3",
+    "standard-version": "^9.3.1",
+    "ts-jest": "^27.0.5",
     "tscpaths": "^0.0.9",
-    "tslib": "^2.3.0",
-    "typescript": "^4.3.5"
+    "tslib": "^2.3.1",
+    "typescript": "4.3"
   },
   "dependencies": {
     "@blackglory/errors": "^1.1.2",
     "@blackglory/go": "^0.1.0",
-    "@blackglory/types": "^0.4.7"
+    "@blackglory/types": "^0.5.0"
   }
 }
