--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
   },
   "devDependencies": {
     "@blackglory/jest-matchers": "^0.1.21",
+    "@blackglory/pass": "^0.1.0",
     "@commitlint/cli": "^13.2.1",
     "@commitlint/config-conventional": "^13.2.0",
     "@rollup/plugin-commonjs": "^21.0.0",
