--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -8,6 +8,7 @@
   , "baseUrl": "."
   , "paths": {
       "@src/*": ["src/*"]
+    , "@utils/*": ["src/utils/*"]
     , "@intermediate/*": ["src/intermediate/*"]
     , "@terminal/*": ["src/terminal/*"]
     , "@test/*": ["__tests__/*"]
