--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
     "eslint": "^8.30.0",
+    "extra-sort": "^0.1.1",
     "husky": "^4.3.8",
     "jest": "^29.3.1",
     "npm-run-all": "^4.1.5",
