--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   ],
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
+  "type": "module",
   "sideEffects": false,
   "repository": "git@github.com:BlackGlory/iterable-operator.git",
   "author": "BlackGlory <woshenmedoubuzhidao@blackglory.me>",
@@ -44,13 +45,13 @@
   },
   "scripts": {
     "lint": "eslint --ext .js,.jsx,.ts,.tsx --quiet src __tests__",
-    "test": "jest --runInBand --config jest.config.js",
-    "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand",
-    "test:coverage": "jest --coverage --config jest.config.js",
+    "test": "jest --runInBand --config jest.config.cjs",
+    "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand --config jest.config.cjs",
+    "test:coverage": "jest --coverage --config jest.config.cjs",
     "prepublishOnly": "run-s clean build",
     "clean": "rimraf lib",
     "build": "run-s build:*",
-    "build:compile": "tsc --project tsconfig.build.json --module commonjs --target es2018 --outDir lib",
+    "build:compile": "tsc --project tsconfig.build.json --outDir lib",
     "build:patch": "tscpaths -p tsconfig.build.json -s ./src -o ./lib",
     "release": "standard-version"
   },
@@ -61,6 +62,7 @@
     }
   },
   "devDependencies": {
+    "@blackglory/jest-resolver": "^0.3.0",
     "@blackglory/pass": "^1.1.0",
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
@@ -71,6 +73,7 @@
     "extra-sort": "^0.1.1",
     "husky": "^4.3.8",
     "jest": "^29.3.1",
+    "jest-resolve": "^29.3.1",
     "npm-run-all": "^4.1.5",
     "return-style": "^1.0.0",
     "rimraf": "^4.1.1",
