--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -10,5 +10,9 @@
       "@src/*": ["src/*"]
     , "@test/*": ["__tests__/*"]
     }
+  , "plugins": [
+      { "transform": "typescript-transform-paths" }
+    , { "transform": "typescript-transform-paths", "afterDeclarations": true }
+    ]
   }
 }
