--- a/package.json
+++ b/package.json
@@ -46,9 +46,9 @@
   "scripts": {
     "prepare": "ts-patch install -s",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx --quiet src __tests__",
-    "test": "jest --runInBand --config jest.config.cjs",
-    "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand --config jest.config.cjs",
-    "test:coverage": "jest --coverage --config jest.config.cjs",
+    "test": "cross-env NODE_OPTIONS='--experimental-vm-modules --max-old-space-size=4096' jest --runInBand --config jest.config.cjs",
+    "test:debug": "cross-env NODE_OPTIONS=--experimental-vm-modules node --inspect-brk node_modules/.bin/jest --runInBand --config jest.config.cjs",
+    "test:coverage": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --coverage --config jest.config.cjs",
     "prepublishOnly": "run-s prepare clean build",
     "clean": "rimraf lib",
     "build": "tsc --project tsconfig.build.json --outDir lib",
@@ -68,13 +68,14 @@
     "@types/jest": "^29.2.6",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "@typescript-eslint/parser": "^5.48.2",
+    "cross-env": "^7.0.3",
     "eslint": "^8.32.0",
     "extra-sort": "^0.1.1",
     "husky": "^4.3.8",
     "jest": "^29.3.1",
     "jest-resolve": "^29.3.1",
     "npm-run-all": "^4.1.5",
-    "return-style": "^1.0.0",
+    "return-style": "^2.0.0",
     "rimraf": "^4.1.1",
     "standard-version": "^9.5.0",
     "ts-jest": "^29.0.5",
@@ -84,12 +85,12 @@
     "typescript-transform-paths": "^3.4.6"
   },
   "dependencies": {
-    "@blackglory/errors": "^2.4.2",
+    "@blackglory/errors": "^2.4.3",
     "@blackglory/go": "^1.1.2",
-    "@blackglory/structures": "^0.12.2",
+    "@blackglory/structures": "^0.13.0",
     "extra-abort": "^0.2.1",
-    "extra-promise": "^5.0.0",
-    "extra-utils": "^4.0.0",
+    "extra-promise": "^6.0.1",
+    "extra-utils": "^5.0.1",
     "justypes": "^4.1.0"
   }
 }
