--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "ES2018"
   , "module": "NodeNext"
+  , "moduleResolution": "NodeNext"
   , "strict": true
   , "noUnusedLocals": true
   , "noUnusedParameters": true
