--- a/package.json
+++ b/package.json
@@ -46,10 +46,8 @@
   },
   "scripts": {
     "prepare": "ts-patch install -s",
-    "lint": "eslint --ext .js,.jsx,.ts,.tsx --quiet src __tests__",
-    "test": "cross-env NODE_OPTIONS='--experimental-vm-modules --max-old-space-size=4096' jest --runInBand --config jest.config.cjs",
-    "test:debug": "cross-env NODE_OPTIONS=--experimental-vm-modules node --inspect-brk node_modules/.bin/jest --runInBand --config jest.config.cjs",
-    "test:coverage": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --coverage --config jest.config.cjs",
+    "lint": "eslint --quiet src __tests__",
+    "test": "vitest --run",
     "prepublishOnly": "run-s prepare clean build",
     "clean": "rimraf lib",
     "build": "tsc --project tsconfig.build.json --outDir lib",
@@ -62,33 +60,31 @@
     }
   },
   "devDependencies": {
-    "@blackglory/jest-resolver": "^0.3.1",
     "@blackglory/pass": "^1.1.1",
-    "@commitlint/cli": "^18.6.0",
-    "@commitlint/config-conventional": "^18.6.0",
-    "@types/jest": "^29.5.11",
-    "@typescript-eslint/eslint-plugin": "^6.19.1",
-    "@typescript-eslint/parser": "^6.19.1",
+    "@commitlint/cli": "^19.2.2",
+    "@commitlint/config-conventional": "^19.2.2",
+    "@eslint/js": "^9.1.1",
     "cross-env": "^7.0.3",
-    "eslint": "^8.56.0",
+    "eslint": "^9.1.0",
     "extra-sort": "^0.1.2",
     "husky": "^4.3.8",
-    "jest": "^29.7.0",
-    "jest-resolve": "^29.7.0",
     "npm-run-all": "^4.1.5",
     "return-style": "^3.0.1",
     "rimraf": "^5.0.5",
     "standard-version": "^9.5.0",
-    "ts-jest": "^29.1.2",
     "ts-patch": "^3.1.2",
     "tslib": "^2.6.2",
-    "typescript": "5.3.3",
-    "typescript-transform-paths": "^3.4.6"
+    "typescript": "5.4.5",
+    "typescript-eslint": "^7.7.0",
+    "typescript-transform-paths": "^3.4.6",
+    "vite": "^5.2.9",
+    "vite-tsconfig-paths": "^4.3.2",
+    "vitest": "^1.5.0"
   },
   "dependencies": {
     "@blackglory/errors": "^3.0.3",
-    "@blackglory/go": "^1.1.3",
-    "@blackglory/structures": "^0.13.4",
+    "@blackglory/go": "^2.0.0",
+    "@blackglory/structures": "^0.14.2",
     "extra-abort": "^0.3.9",
     "extra-promise": "^6.2.0",
     "extra-utils": "^5.6.0",
