--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   "author": "BlackGlory <woshenmedoubuzhidao@blackglory.me>",
   "license": "MIT",
   "engines": {
-    "node": ">=18.17.0"
+    "node": ">=22"
   },
   "scripts": {
     "prepare": "ts-patch install -s",
@@ -61,33 +61,34 @@
   },
   "devDependencies": {
     "@blackglory/pass": "^1.1.1",
-    "@commitlint/cli": "^19.2.2",
-    "@commitlint/config-conventional": "^19.2.2",
-    "@eslint/js": "^9.1.1",
-    "cross-env": "^7.0.3",
-    "eslint": "^9.1.0",
-    "extra-sort": "^0.1.2",
+    "@commitlint/cli": "^20.4.1",
+    "@commitlint/config-conventional": "^20.4.1",
+    "@eslint/js": "^10.0.1",
+    "@types/node": "22",
+    "cross-env": "^10.1.0",
+    "eslint": "^10.0.0",
+    "extra-sort": "^0.2.0",
     "husky": "^4.3.8",
     "npm-run-all": "^4.1.5",
     "return-style": "^3.0.1",
-    "rimraf": "^5.0.5",
+    "rimraf": "^6.1.3",
     "standard-version": "^9.5.0",
-    "ts-patch": "^3.1.2",
-    "tslib": "^2.6.2",
-    "typescript": "5.4.5",
-    "typescript-eslint": "^7.7.0",
-    "typescript-transform-paths": "^3.4.6",
-    "vite": "^5.2.9",
-    "vite-tsconfig-paths": "^4.3.2",
-    "vitest": "^1.5.0"
+    "ts-patch": "^3.3.0",
+    "tslib": "^2.8.1",
+    "typescript": "5.9.3",
+    "typescript-eslint": "^8.55.0",
+    "typescript-transform-paths": "^3.5.6",
+    "vite": "^7.3.1",
+    "vite-tsconfig-paths": "^6.1.1",
+    "vitest": "^4.0.18"
   },
   "dependencies": {
     "@blackglory/errors": "^3.0.3",
     "@blackglory/go": "^2.0.0",
-    "@blackglory/structures": "^0.14.2",
-    "extra-abort": "^0.3.9",
-    "extra-promise": "^6.2.0",
-    "extra-utils": "^5.6.0",
-    "justypes": "^4.2.1"
+    "@blackglory/structures": "^0.14.11",
+    "extra-abort": "^0.4.1",
+    "extra-promise": "^7.0.1",
+    "extra-utils": "^5.20.0",
+    "justypes": "^4.5.0"
   }
 }
